--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- ヘッダー -->
      <header>
       <div class="h-title">
-        <img class="h-logo" src="img/logo.png" alt="logo">
+        <img class="h-logo" src="logo.png" alt="logo">
 
       <!-- スマホハンバーガーメニュー -->
         <div class="sp-menu">
