--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
      
       <!-- ヘッダー画像 -->
        <div class="h-imagebox">
-        <img class="h-image" src="img/1.jpg" alt="company-image">
+        <img class="h-image" src="1.jpg" alt="company-image">
        </div>
      </header>
 
