--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- ヘッダー -->
      <header>
       <div class="h-title">
-        <img class="h-logo" src="logo.png" alt="logo">
+        <img class="h-logo" src="img/logo.png" alt="logo">
 
       <!-- スマホハンバーガーメニュー -->
         <div class="sp-menu">
@@ -166,7 +166,7 @@
      
       <!-- ヘッダー画像 -->
        <div class="h-imagebox">
-        <img class="h-image" src="1.jpg" alt="company-image">
+        <img class="h-image" src="img/1.jpg" alt="company-image">
        </div>
      </header>
 
